# text-cleaning-toolkit

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  text_cleaner.py
app/utils/: __init__.py  core.py
tests/: test_cli.py  test_text_cleaner.py  test_version.py
